<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="0pt"
        android:layout_weight="2"
        android:text="@string/date"
        android:background="@color/tableHeadBackground"
        android:layout_margin="0.4pt"
        android:padding="2pt"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"/>
    <TextView
        android:layout_width="0pt"
        android:layout_weight="3"
        android:text="@string/name_goods"
        android:background="@color/tableHeadBackground"
        android:layout_margin="0.4pt"
        android:padding="2pt"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"/>
    <TextView
        android:layout_width="0pt"
        android:layout_weight="2"
        android:text="@string/price"
        android:background="@color/tableHeadBackground"
        android:layout_margin="0.4pt"
        android:padding="2pt"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"/>
</TableRow>